Closed Bug 299280 Opened 21 years ago Closed 21 years ago

Invalid 'value=' att value in form control not firing xforms-compute-exception

Categories

(Core Graveyard :: XForms, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: stpride, Assigned: allan)

Details

Attachments

(2 files, 1 obsolete file)

890 bytes, application/xhtml+xml
Details
4.96 KB, patch
doronr
: review+
aaronr
: review+
Details | Diff | Splinter Review
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.8) Gecko/20050509 Firefox/1.0.4 Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.7.8) Gecko/20050509 Firefox/1.0.4 When an invalid 'value=' attribute value is used for a form control, the xforms-compute-exception event is not firing. Reproducible: Always
Attached file testcase (obsolete) —
Attached file Fixed testcase
attachment 187854 [details] listened for the wrong event. Here's a valid one.
Assignee: aaronr → allan
Attachment #187854 - Attachment is obsolete: true
Status: UNCONFIRMED → ASSIGNED
Attached patch PatchSplinter Review
In nsXFormsUtils::EvaluateXPath we were only throwing the xforms-compute-exception errors during evaluation errors, not parsing. This patch fixes that. We actually generate the error twice, but this will only happen until we figure out how we will halt processing on fatal errors (which this is).
Attachment #189761 - Flags: review?(doronr)
Attachment #189761 - Flags: review?(doronr) → review+
Attachment #189761 - Flags: review?(aaronr)
Attachment #189761 - Flags: review?(aaronr) → review+
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: